# libreria-parcial-valentina

./: .gitignore  README.md  pyproject.toml
features/: precio_producto.feature
features/steps/: precio_steps.py
src/: solution.py
src/libreria/: producto.py
tests/: TEORIA.md  test_producto.py  test_solution.py
