[project]
name = "libreria-parcial-valentina"
version = "0.1.0"
description = "Parcial de pruebas de software"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "behave",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "smoke: quick sanity checks",
    "critical: critical path tests",
    "regression: regression tests",
]